# setup-windows10-sdk-action

./: CMakeLists.txt  CONTRIBUTING.md  README.md  action.yml  package-lock.json  package.json
.github/workflows/: default-sdk-version-workflow.yml  main.yml  security_pipeline.yml  specific-sdk-version-workflow.yml  test-20348.yml  tests.yml
__tests__/: index.test.js
src/: index.js
